compiler-core/src/erlang/snapshots/gleam_core__erlang__tests__integration_test-19.snap
---
source: compiler-core/src/erlang/tests.rs
expression: "type Point { Point(x: Int, y: Int) }\n                fn y() { fn() { Point }()(4, 6) }"

---
-module(the_app).
-compile(no_auto_import).

-export_type([point/0]).

-type point() :: {point, integer(), integer()}.

-spec y() -> point().
y() ->
    ((fun() -> fun(A, B) -> {point, A, B} end end)())(4, 6).

